2016-09-24  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/utils.py (BindingConfiguration): Correctly retrieve the value of
	binding configuration arguments.

2016-09-20  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/utils.py (WorkerThread.run): Report any errors thrown in _real_run.

2016-09-17  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* config.ac: Release 0.201
	* NEWS: Update.

	* src/utils.py (BindingMethodRegistry.register_enabled_methods): Only
	pass arguments needed for the module being initialized.

	* src/bind_methods.py: Implement pkcs11 binding method.

2016-09-16  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* Allow changing passphrase binding after granting
	* Allow passing a bound passphrase everywhere a passphrase is accepted

2016-09-10  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* Implement sign-git-tag

2016-09-07  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* configure.ac: Release 0.200.
	* NEWS: Update.

	* Lots of new features, as listed in NEWS.

2015-11-26  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.102.
	* NEWS: Update.

	* src/bridge.py (SignRPMsReadReplyThread._real_run): On exceptions,
	shut down the server socket to cause *RequestThread to terminate even
	if the server is blocking and waiting for this thread to continue reading
	its replies.

	* src/utils.py (run_worker_threads): Do not log exceptions after
	waiting on a thread, the thread has logged it already at termination
	time.

	* src/utils.py (log_exception): New parameter thread_name.  All users
	changed.

	* src/utils.py (WorkerQueueOrphanedError, WorkerQueue): New classes.
	(WorkerThread.run): Mark input queues as orphaned. Be fairly silent
	about failures sending EOF to orphaned queues.
	(run_worker_threads): Silently ignore failures sending EOF to orphaned
	queues.
	(log_exception): Recognize WorkerQueueOrphanedError.
	* src/bridge.py (SignRPMsRequestHandler.post_request_phase)
	* src/server.py (cmd_sign_rpms): Use utils.WorkerQueue.
